[package]
name = "another_json_minimal"
version = "0.0.1"
authors = ["36den", "meilier"]
edition = "2021"
description = "A minimal json crate."
license = "MIT OR Apache-2.0"
keywords = ["json","minimal"]
categories = ["encoding"]
repository = "https://github.com/meilier/json_minimal-rust"
readme = "README.md"

[dependencies]
